[tool.poetry]
name = "krill-status"
version = "0.1.0"
description = ""
authors = ["Ties de Kock <ties@tiesdekock.nl>"]
readme = "README.md"
packages = [{include = "krill_status"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
aiohttp = "^3.8.3"
jupyterlab = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
